--- a/src/main/resources/templates/user/user.html
+++ b/src/main/resources/templates/user/user.html
@@ -18,7 +18,7 @@
     <label for="firstname">Firstname:
         <input id="firstname" type="text" name="firstname" th:value="*{firstname}">
     </label><br>
-    <div th:if="${user.image}">
+    <div th:if="${user.avatar}">
         <img width="40" th:src="@{/api/v1/users/{userId}/avatar(userId=${user.id})}" alt="User Image"/>
     </div>
     <label for="image">Image:
