--- a/src/main/resources/templates/user/login.html
+++ b/src/main/resources/templates/user/login.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>Login</title>
@@ -12,9 +12,11 @@
     <label for="password">Password:
         <input id="password" type="password" name="password">
     </label><br>
+    <input type="hidden" th:name="${_csrf}" th:value="${_csrf.token}"/>
     <button type="submit">Login</button>
 </form>
 <form action="/users/registration">
+    <input type="hidden" th:name="${_csrf}" th:value="${_csrf.token}"/>
     <button type="submit">Registration</button>
 </form>
 </body>
