--- a/src/main/resources/templates/user/registration.html
+++ b/src/main/resources/templates/user/registration.html
@@ -35,6 +35,7 @@
             </select>
         </label>
     </div>
+    <input type="hidden" th:name="${_csrf}" th:value="${_csrf.token}"/>
     <button type="submit">Register</button>
 </form>
 <div th:if="${errors}">
