--- a/src/main/resources/templates/user/user.html
+++ b/src/main/resources/templates/user/user.html
@@ -41,10 +41,11 @@
             </select>
         </label>
     </div>
+    <input type="hidden" th:name="${_csrf}" th:value="${_csrf.token}"/>
     <button type="submit">Update</button>
 </form>
-<form th:action="@{/users/{userId}/delete(userId=${user.id})}"
-      th:if="${user.role.name() == 'ADMIN'}" method="post">
+<form th:action="@{/users/{userId}/delete(userId=${user.id})}" method="post">
+    <input type="hidden" th:name="${_csrf}" th:value="${_csrf.token}"/>
     <button type="submit">Remove</button>
 </form>
 </body>
